[project]
name = "attacker-report"
version = "0.1.0"
description = "Monitor Gnosis Chain for Omen/Reality.eth oracle manipulation"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "grok-api",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "requests>=2.32.5",
    "web3>=7.14.1",
]

[project.scripts]
attacker-report = "main:main"

[tool.uv.sources]
grok-api = { git = "https://github.com/LOCKhart07/Grok-Api.git" }
